Nav code updated based on AI feedback

--- a/public/index.html
+++ b/public/index.html
@@ -29,8 +29,8 @@
   <body>
     <!-- Top nav bar (fixed) -->
     <nav>
-      <span>tweeter</span>
-      <a href="#"><span>Write</span> a new tweet <i class="fa-solid fa-angles-down"></i></a>
+      <span class="tweeter-logo">tweeter</span>
+      <a href="#" class="new-tweet"><span>Write</span> a new tweet <i class="fa-solid fa-angles-down"></i></a>
     </nav>
 
     <!-- Page-specific (main) content here -->
