--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,8 @@
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
     <!-- Nav CSS -->
     <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
+    <!-- Header CSS -->
+    <link rel="stylesheet" href="/styles/header.css" type="text/css" />
 
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -32,6 +34,15 @@
       <span class="tweeter-logo">tweeter</span>
       <a href="#" class="new-tweet"><span>Write</span> a new tweet <i class="fa-solid fa-angles-down"></i></a>
     </nav>
+
+    <header>
+      <div>
+        <img src="/images/profile-hex.png">
+      </div>
+      <div>
+        <h2>Darshita <span>Patel</span></h2>
+      </div>
+    </header>
 
     <!-- Page-specific (main) content here -->
     <main class="container"></main>
