--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,8 @@
     <link rel="stylesheet" href="/styles/header.css" type="text/css" />
     <!-- new tweet CSS -->
     <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
+    <!-- tweet CSS -->
+    <link rel="stylesheet" href="/styles/tweet.css" type="text/css" />
 
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -60,6 +62,48 @@
             <output name="counter" class="counter" for="tweet-text">140</output>
           </div>
         </form>
+      </section>
+      <section class="tweet-container">
+        <article class="tweet">
+          <header>
+            <div class="user-profile">
+              <img src="https://i.imgur.com/73hZDYK.png" alt="Newton" class="user-avatar">
+              <span class="user-name">Newton</span>
+            </div>
+            <a class="user-handle" href="#">@SirIsaac</a>
+          </header>
+          <div class="tweet-body">
+            <p>If I have seen further it is by standing on the shoulders of giants</p>
+          </div>
+          <footer>
+            <div class="created_at">10 days ago</div>
+            <div class="tweet-options">
+              <a href="#"><i class="fa-solid fa-flag"></i></a>
+              <a href="#"><i class="fa-solid fa-retweet"></i></a>
+              <a href="#"><i class="fa-solid fa-heart"></i></a>
+            </div>
+          </footer>
+        </article>
+        <article class="tweet">
+          <header>
+            <div class="user-profile">
+              <img src="https://i.imgur.com/nlhLi3I.png" alt="Descartes" class="user-avatar">
+              <span class="user-name">Descartes</span>
+            </div>
+            <a class="user-handle" href="#">@rd</a>
+          </header>
+          <div class="tweet-body">
+            <p>Je pense , donc je suis</p>
+          </div>
+          <footer>
+            <div class="created_at">1 day ago</div>
+            <div class="tweet-options">
+              <a href="#"><i class="fa-solid fa-flag"></i></a>
+              <a href="#"><i class="fa-solid fa-retweet"></i></a>
+              <a href="#"><i class="fa-solid fa-heart"></i></a>
+            </div>
+          </footer>
+        </article>
       </section>
     </main>
   </body>
