--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
     <main class="container">
       <section class="new-tweet">
         <h2>Compose Tweet</h2>
-        <form action="/tweets/" method="POST">
+        <form id="newTweet">
           <label for="tweet-text">What are you humming about?</label>
           <textarea name="text" id="tweet-text"></textarea>
           <div class="d-flex justify-content-between compose-tweet-footer">
