--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,10 @@
     <!-- Page-specific (main) content here -->
     <main class="container">
       <section class="new-tweet">
-        <h2>Compose Tweet</h2>
+        <div class="tweet-error">
+          <span>error</span>
+          <a href="#" class="alert-close"><i class="fa-solid fa-xmark"></i></a>
+        </div>
         <form id="newTweet">
           <label for="tweet-text">What are you humming about?</label>
           <textarea name="text" id="tweet-text"></textarea>
