--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
     <!-- Top nav bar (fixed) -->
     <nav>
       <span class="tweeter-logo">tweeter</span>
-      <a href="#" class="new-tweet"><span>Write</span> a new tweet <i class="fa-solid fa-angles-down"></i></a>
+      <a href="#" class="btn-new-tweet"><span>Write</span> a new tweet <i class="fa-solid fa-angles-down"></i></a>
     </nav>
 
     <header>
