scroll to top and toggle form

--- a/public/index.html
+++ b/public/index.html
@@ -69,6 +69,7 @@
         </form>
       </section>
       <section id="tweets-container"></section>
+      <a href="#" class="scrool-to-top"><i class="fa-solid fa-angles-up"></i></a>
     </main>
   </body>
 </html>
